--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+table {
+            border-collapse: collapse;
+     }
+
+            th, td , tr{
+              border: 1px solid black;
+              padding: 8px;
+              width:100px;
+            }
